Remove lager to reduce the number of dependencies. It's useful when publishing to hex.pm

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,6 @@
 {sub_dirs, ["rel", "deps"]}.
 {deps_dir, "deps"}.
-{erl_opts, [{parse_transform, lager_transform},
-            warn_unused_vars,
+{erl_opts, [warn_unused_vars,
             warn_export_all,
             warn_shadow_vars,
             warn_unused_import,
@@ -16,8 +15,5 @@
             warn_untyped_record,
             {i, "include"}]}.
 {deps,
- [{parse_trans, ".*", {git, "git@github.com:uwiger/parse_trans.git", "master"}},
-  {lager,       ".*", {git, "git@github.com:basho/lager.git", "master"}},
-  {epocxy,  "0.9.8c", {git, "git@github.com:duomark/dk_cxy.git", {tag, "0.9.8c"}}},
-  {validerl,    ".*", {git, "https://github.com/HernanRivasAcosta/validerl.git",
-                       "master"}}]}.
+ [{epocxy,  "0.9.8c", {git, "https://github.com/duomark/dk_cxy.git", {tag, "0.9.8c"}}},
+  {validerl,    ".*", {git, "https://github.com/HernanRivasAcosta/validerl.git", "master"}}]}.
