--- a/rel/kafkerl.app.config
+++ b/rel/kafkerl.app.config
@@ -1,6 +1,4 @@
-[{lager, [{colored, true},
-          {handlers, [{lager_console_backend, [debug,true]}]}]},
- {kafkerl, [%{gen_server_name, kafkerl_client},
+[{kafkerl, [%{gen_server_name, kafkerl_client},
             {disabled, false},
             {conn_config, [{brokers, [{"localhost", 9090},
                                       {"localhost", 9091},
