LOTS of Inaka Magic :star2:

--- a/rebar.config
+++ b/rebar.config
@@ -15,5 +15,6 @@
             warn_untyped_record,
             {i, "include"}]}.
 {deps,
- [{epocxy,  "0.9.8c", {git, "https://github.com/duomark/dk_cxy.git", {tag, "0.9.8c"}}},
-  {validerl,    ".*", {git, "https://github.com/HernanRivasAcosta/validerl.git", "master"}}]}.
+ [{epocxy,  "1.0.0", {git, "https://github.com/duomark/epocxy.git", "1.0.0"}},
+  {validerl,   ".*", {git, "https://github.com/inaka/validerl.git", "1.0.0"}}
+ ]}.
